修改html样式,添加公共类名.提供楼层效果

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header></header>
-    <section id="banner"></section>
-    <section id="super">
+    <section id="banner" class="floor"></section>
+    <section id="super" class="floor" >
         <div class="margin">
             <div class="super_time">
                 <ul>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </section>
-    <section id="floor">
+    <section id="floor" class="floor">
         <div class="margin">
             <div class="floor_box">
                     <div class="floor_left">
@@ -100,7 +100,7 @@
             </div>
         </div>
     </section>
-    <section id="floor">
+    <section id="floor" class="floor" >
         <div class="margin">
             <div class="floor_box">
                  <div class="floor_left">
@@ -156,7 +156,7 @@
             </div>
         </div>
     </section>
-    <section id="floor" style="padding-bottom: 30px;">
+    <section id="floor" class="floor" style="padding-bottom: 30px;">
             <div class="margin">
                 <div class="floor_box">
                      <div class="floor_left">
@@ -214,12 +214,12 @@
     </section>
     
     <section id="floor_index">
+        <span>限时<br/>秒杀</span>
+        <span>品质<br/>生活</span>
         <span>热卖<br/>单品</span>
-        <span>热卖<br/>单品</span>
-        <span>热卖<br/>单品</span>
-        <span>热卖<br/>单品</span>
-        <span>热卖<br/>单品</span>
-        <span>热卖<br/>单品</span>
+        <span>品质<br/>生活</span>       
+        <span>运动<br/>每天</span>       
+        <span>回到<br/>顶部</span>
     </section>
 
     <footer></footer>
