添加放大镜功能,以及倒计时样式,商品个数设置

--- a/goodsmsg.html
+++ b/goodsmsg.html
@@ -22,7 +22,7 @@
     <section id="goods_intro">
         <div class="margin clear">
             <div class="intro_left">
-                <div class="img">
+                <!-- <div class="img">
                     <img src="" alt="">
                     <span></span>
                 </div>
@@ -33,7 +33,7 @@
                     <img src="" alt="">
                     <img src="" alt="">
                     <img src="" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="intro_right">
                 <!-- <h5 class="te">自营  荣耀V20 游戏手机 麒麟980芯片 魅眼全视屏 4800万深感相机 6GB+128GB 幻夜黑 移动联通电信4G全面屏手机</h5>
@@ -68,6 +68,11 @@
                     <li>优惠套装</li>
                 </ul>
                 <div class="gobuy">
+                    <div class="gobuy_num">
+                        <input type="text" value="1">
+                        <i class="add">+</i>
+                        <i class="radius">-</i>
+                    </div>
                     <input type="button" value="加入购物车" class="gocar">
                     <input type="button" value="立即购买" class="buy">
                 </div> -->
