修改购物车静态页面,改为数据渲染

--- a/car.html
+++ b/car.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>购物车</title>
     <link rel="stylesheet" href="css/public.css">
     <link rel="stylesheet" href="css/publich.css">
     <link rel="stylesheet" href="css/car.css">
@@ -41,40 +41,42 @@
                 </div>
             </div>
             <div class="car_more">
-                <ul class="big">
-                    <li class="lie_header">    
+                <div class="car_top">
+                    <ul>
+                        <li>
+                            <input type="checkbox" id="checkAll" class="cheackAll">
+                            <label for="checkAll">全选</label>
+                        </li> 
+                        <li>商品信息</li>
+                        <li>单价（元）</li>
+                        <li>数量</li>
+                        <li>小计（元）</li>
+                        <li>操作</li>
+                    </ul>
+                </div>
+                <div class="car_body">
+                    <!-- <div class="car_goods">
                         <ul>
-                            <li><input type="checkbox" id="check_all" class="check_all"><label for="checkbox">全选</label></li>
-                            <li>商品信息</li>
-                            <li>单价 (元) </li>
-                            <li>数量</li>
-                            <li>小计 (元)) </li>
-                            <li>操作</li>
+                            <li>
+                                <input type="checkbox" class="checkOne"  id="checkOne">
+                            </li>
+                            <li>
+                                <img src="images/banner2.jpg" alt="" style="width: 75px;height:75px;">
+                                <p>夏新 (AMOI) I7无线蓝牙耳机双耳耳塞式适用于苹果IPhone X/XR小米华为重低音迷你男女安卓通</p>
+                            </li>
+                            <li>1234</li>
+                            <li>
+                                <div class="gobuy_num">
+                                    <i class="add">+</i>
+                                    <input type="text" value="1" >
+                                    <i class="radius">-</i>
+                                </div>
+                            </li>
+                            <li>22222</li>
+                            <li><input type="button" value="" id="delete" class="delete"></li>
                         </ul>
-                    </li>
-                    <li class="lie">
-                        <ul>
-                            <li><input type="checkbox" id="checkbox" class="checkbox"></li>
-                            <li><img src="images/logo2.jpg" alt="">
-                            小米9 4800万超广角三摄 6GB+128GB全息幻彩蓝  骁龙855 全网通4G 双卡双待 水滴全面屏拍照智能游戏手机</li>
-                            <li>1666</li>
-                            <li><input type="number"></li>
-                            <li>3222</li>
-                            <li><input type="button" value="删除"></li>
-                        </ul>
-                    </li>
-                    <li class="lie">
-                        <ul>
-                            <li><input type="checkbox" id="checkbox"></li>
-                            <li><img src="images/logo2.jpg" alt="" style="width: 50px;">
-                            小米9 4800万超广角三摄 6GB+128GB全息幻彩蓝   <br>  骁龙855 全网通4G 双卡双待 水滴全面屏拍照智能游戏手机</li>
-                            <li>1666</li>
-                            <li><input type="number"></li>
-                            <li>3222</li>
-                            <li><input type="button" value="删除"></li>
-                        </ul>
-                    </li>
-                </ul>
+                    </div> -->
+                </div>
             </div>
             <div class="payfor">
                 <div class="payfor_left">
@@ -100,34 +102,34 @@
     <footer></footer>
 </body>
 <script src="libs/jquery.js"></script>
+<script src="libs/cookie.js"></script>
+<script src="js/car.js"></script>
 <script>
 
     // var a = document.querySelectorAll("#checkbox");
 
     // $(".lie").find("")
-    console.log(a[0])
-    console.log(a[1])
+//     console.log(a[0])
+//     console.log(a[1])
 
 
 
-$("header").load("public.html .header_top",function(){
-        // console.log(status);
-        console.log(1)
-        // var a = document.getElementById("txt_t");
-        var a = document.getElementById("txt_t");
-        var b= document.querySelector("margin_b")
-        console.log(b)
-        // console.log(a);
-    });
-    $("#banner").load("public.html .margin_b",function(){
-        var a = document.getElementById("txt_t");
-        console.log(a);
-        console.log(1)
-    });
+// $("header").load("public.html .header_top",function(){
+//         // console.log(status);
+//         console.log(1)
+//         // var a = document.getElementById("txt_t");
+//         var a = document.getElementById("txt_t");
+//         var b= document.querySelector("margin_b")
+//         console.log(b)
+//         // console.log(a);
+//     });
+//     $("#banner").load("public.html .margin_b",function(){
+//         var a = document.getElementById("txt_t");
+//         console.log(a);
+//         console.log(1)
+//     });
 
     $("footer").load("public.html .margin_f",function(){
-        var a = document.getElementById("txt_t");
-        console.log(a);
     });
 
 </script>
