修改商品详情静态页面,改为数据渲染,加入成功添加购物车功能

--- a/goodsmsg.html
+++ b/goodsmsg.html
@@ -69,7 +69,7 @@
                 </ul>
                 <div class="gobuy">
                     <div class="gobuy_num">
-                        <input type="text" value="1">
+                        <input type="text" value="1" disabled="disabled">
                         <i class="add">+</i>
                         <i class="radius">-</i>
                     </div>
@@ -78,7 +78,14 @@
                 </div> -->
             </div>
         </div>
-
+    </section>
+    <section id="alert">
+        <div class="alert_cont">
+           <span>&times;</span>
+           <p>已成功加入购物车</p>
+           <input type="button" class="goon" value="继续购物">
+           <input type="button" class="lookcar" value="查看购物车">
+        </div>
     </section>
     <footer></footer>
 </body>
