修改购物车样式,进行数据渲染

--- a/car.html
+++ b/car.html
@@ -44,7 +44,7 @@
                 <div class="car_top">
                     <ul>
                         <li>
-                            <input type="checkbox" id="checkAll" class="cheackAll">
+                            <input type="checkbox" id="checkAll" class="checkAll">
                             <label for="checkAll">全选</label>
                         </li> 
                         <li>商品信息</li>
@@ -80,13 +80,13 @@
             </div>
             <div class="payfor">
                 <div class="payfor_left">
-                    <input type="checkbox" id="check_all" class="check_all">
+                    <input type="checkbox" id="checkAll" class="checkAll">
                     <label for="check_all">全选</label>
                     <input type="button" value="清空购物车" id="clearcar" class="clearcar">
                 </div>
                 <div class="payfor_right">
-                    <p>已选商品 <i> 4 </i> 件</p>
-                    <p>合计: <em>282元</em> </p>
+                    <p>已选商品 <i> 0 </i> 件</p>
+                    <p>合计: ￥<em>0</em> 元</p>
                     <div class="money">
                         去结算
                     </div>
