--- a/login.html
+++ b/login.html
@@ -11,6 +11,13 @@
             background-repeat: no-repeat;
                 background-position: 210px 14px;
             }
+
+        #form{
+            background: #fcfcfc url(images/login.png) no-repeat left;
+            padding-left: 520px;
+            height: 420px;;
+        }
+        #form p{margin-top: 30px;}
     </style>
 </head>
 <body>
