修改公共的样式,为添加退出功能

--- a/public.html
+++ b/public.html
@@ -13,7 +13,7 @@
                         <a href="http://localhost/project_two/projectshop/login.html" class="login">登录</a>
                         <a href="http://localhost/project_two/projectshop/register.html">注册</a>
                     </li>
-                    <li><a href="#">会员俱乐部</a></li>
+                    <li><a href="http://localhost/project_two/projectshop/login.html">退出</a></li>
                     <li><a href="#">我的订单</a></li>
                 </ul>
             </div>
