--- a/register.html
+++ b/register.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>注册页面</title>
     <link rel="stylesheet" href="css/register.css">
+    <style>
+    #form{
+            background: #fcfcfc url(images/login.png) no-repeat left;
+            padding-left: 520px;
+            height: 420px;;
+        }
+        #form p{margin-top: 30px;}
+    </style>
 </head>
 <body>
     <h2>注册页面</h2>
