添加绝对定位的搜索框样式

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        
+    </header>
     <section id="banner" class="floor"></section>
     <section id="super" class="floor" >
         <div class="margin">
