添加绝对定位的搜索框,为公共资源

--- a/public.html
+++ b/public.html
@@ -1,4 +1,17 @@
 <div class="header">
+        <div class="header_f">
+                <div class="header-fixed margin">
+                    <div class="fixed"><a href=""><img src="images/logo4.jpg" alt=""></a></div>
+                    <div class="txt_search_f">
+                        <input type="text" class="txt_f" value="" id="txt_f"> 
+                        <input type="button" class="txt_b" id="txt_b">
+                        <ul class="list_f"></ul>
+                    </div>
+                    <div class="car_f">
+                        <a href="#">购物车</a>
+                    </div>
+                </div>
+            </div> 
     <div class="header_top">
         <div class="margin">
             <div class="header_top_left">
