--- a/register.html
+++ b/register.html
@@ -16,7 +16,12 @@
     </style>
 </head>
 <body>
-    <h2>注册页面</h2>
+        <h2 style="text-align: center">
+                <a href="http://localhost/project_two/projectshop/index.html" style="
+                    background: url(images/logo1.png) no-repeat left; width: 130px;height: 90px;display: block;
+                    background-size: 130px 90px;padding-left: 100px; text-align: center;line-height: 90px;text-decoration: none;">1号店注册</a>
+                
+            </h2>
     <div id="form">
         <p>
             <label for="user_name" class="label">用户名</label>
